--- a/frontend/src/compontents/scss/MenuSlider.scss
+++ b/frontend/src/compontents/scss/MenuSlider.scss
@@ -68,3 +68,21 @@
         }
     }
 }
+
+@media (max-width: 992px) {
+    .container-menu-slider {
+        width: 50%;
+    }
+}
+
+@media (max-width: 768px) {
+    .container-menu-slider {
+        width: 75%;
+    }
+}
+
+@media (max-width: 576px) {
+    .container-menu-slider {
+        width: 100%;
+    }
+}
