--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -27,3 +27,16 @@ ul {
 a {
   text-decoration: none;
 }
+
+.overlay {
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 5;
+  transform: display .3s;
+}
